--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -112,7 +112,8 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <HintPath>ImportLibs\Interop.EDAL.dll</HintPath>
     </Reference>
-    <Reference Include="pwiz_bindings_cli">
+    <Reference Include="pwiz_bindings_cli, Version=0.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ImportLibs\pwiz_bindings_cli.dll</HintPath>
     </Reference>
     <Reference Include="System" />
