--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Constants\Activator.cs" />
     <Compile Include="Constants\ByteOrder.cs" />
     <Compile Include="Constants\FileFormat.cs" />
+    <Compile Include="Constants\MobilityType.cs" />
     <Compile Include="Constants\RedisConst.cs" />
     <Compile Include="Constants\Const.cs" />
     <Compile Include="Constants\MSType.cs" />
