--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -248,8 +248,14 @@
     <PackageReference Include="BetterFolderBrowser">
       <Version>1.2.0</Version>
     </PackageReference>
+    <PackageReference Include="BrotliSharpLib">
+      <Version>0.3.3</Version>
+    </PackageReference>
     <PackageReference Include="HDF5DotNet.x64">
       <Version>1.8.9</Version>
+    </PackageReference>
+    <PackageReference Include="IronSnappy">
+      <Version>1.3.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
