--- a/Compress/Compress.csproj
+++ b/Compress/Compress.csproj
@@ -13,6 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BrotliSharpLib" Version="0.3.3" />
+    <PackageReference Include="IronSnappy" Version="1.3.0" />
     <PackageReference Include="ZstdNet" Version="1.4.5" />
   </ItemGroup>
 
