--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -273,10 +273,10 @@
       <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
-      <Version>2.5.27-prerelease</Version>
+      <Version>2.5.43</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>6.0.2-mauipre.1.22102.15</Version>
+      <Version>7.0.0-preview.1.22076.8</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.2-pre.12</Version>
