--- a/Compress/Compress.csproj
+++ b/Compress/Compress.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="BrotliSharpLib" Version="0.3.3" />
     <PackageReference Include="IronSnappy" Version="1.3.0" />
+    <PackageReference Include="log4net" Version="2.0.14" />
     <PackageReference Include="ZstdNet" Version="1.4.5" />
   </ItemGroup>
 
