--- a/DomainsCore/DomainsCore.csproj
+++ b/DomainsCore/DomainsCore.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="pwiz_bindings_cli">
       <HintPath>..\ImportLibs\pwiz_bindings_cli.dll</HintPath>
     </Reference>
