--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ThirdParty\ThirdParty.csproj" />
   </ItemGroup>
 
