增加Simple116, OptPFDS16, NewPFDS16三种新的整型压缩内核

--- a/Compress/Compress.csproj
+++ b/Compress/Compress.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="IntComp\S16er" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BrotliSharpLib" Version="0.3.3" />
     <PackageReference Include="IronSnappy" Version="1.3.0" />
     <PackageReference Include="log4net" Version="2.0.14" />
