--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -158,7 +158,8 @@
     <Compile Include="Converters\DDAPasef .cs" />
     <Compile Include="Converters\DIAPasef.cs" />
     <Compile Include="Domains\HardwareInfo\HardwareInfo.cs" />
-    <Compile Include="Domains\Log\AppLogs.cs" />
+    <Compile Include="Domains\Logs\AppLogs.cs" />
+    <Compile Include="Domains\Logs\Log.cs" />
     <Compile Include="Domains\Scan\MsIndex.cs" />
     <Compile Include="Domains\Scan\TempScan.cs" />
     <Compile Include="Domains\Scan\TempScanSZDPD.cs" />
@@ -180,7 +181,6 @@
     <Compile Include="Domains\Job\JobInfo.cs" />
     <Compile Include="Storage\Config\ConversionConfig.cs" />
     <Compile Include="Domains\Job\RemoteConvertJob.cs" />
-    <Compile Include="Domains\Log\Log.cs" />
     <Compile Include="Domains\Sort\IntArrayNode.cs" />
     <Compile Include="Forms\ConversionConfigListForm.cs">
       <SubType>Form</SubType>
@@ -318,8 +318,8 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DomainsCore\AirdSDK.csproj">
-      <Project>{870ee31c-23e3-4836-ac04-4feeb6c487b7}</Project>
+    <ProjectReference Include="..\AirdSDK\AirdSDK.csproj">
+      <Project>{02aa6048-fe7e-402f-a9ec-d91020814634}</Project>
       <Name>AirdSDK</Name>
     </ProjectReference>
     <ProjectReference Include="..\ThirdParty\ThirdParty.csproj">
