--- a/AirdSDK/AirdSDK.csproj
+++ b/AirdSDK/AirdSDK.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="BrotliSharpLib" Version="0.3.3" />
     <PackageReference Include="IronSnappy" Version="1.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="ZstdNet" Version="1.4.5" />
   </ItemGroup>
 
