--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -304,6 +304,9 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AirdSDK">
+      <Version>2.0.3.1-beta2</Version>
+    </PackageReference>
     <PackageReference Include="BetterFolderBrowser">
       <Version>1.2.0</Version>
     </PackageReference>
@@ -337,12 +340,6 @@
     <PackageReference Include="ZstdNet">
       <Version>1.4.5</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AirdSDK\AirdSDK.csproj">
-      <Project>{02aa6048-fe7e-402f-a9ec-d91020814634}</Project>
-      <Name>AirdSDK</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Test\" />
