--- a/AirdPro/Properties/Settings.settings
+++ b/AirdPro/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="AirdPro.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="repository" Type="System.String" Scope="Application">
+    <Setting Name="repository" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
