--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="AirdPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="AirdPro.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup>
@@ -24,11 +24,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <applicationSettings>
+  <userSettings>
     <AirdPro.Properties.Settings>
       <setting name="repository" serializeAs="String">
         <value />
       </setting>
     </AirdPro.Properties.Settings>
-  </applicationSettings>
+  </userSettings>
 </configuration>
