--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -159,6 +159,12 @@
     <Compile Include="Constants\ProcessingStatus.cs" />
     <Compile Include="Constants\ResultCode.cs" />
     <Compile Include="Constants\SoftwareInfo.cs" />
+    <Compile Include="Controls\AirdPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\AirdPanel.Designer.cs">
+      <DependentUpon>AirdPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Converters\DDAPasef .cs" />
     <Compile Include="Converters\DIAPasef.cs" />
     <Compile Include="Domains\HardwareInfo\HardwareInfo.cs" />
@@ -232,6 +238,9 @@
     <Compile Include="Utils\CVUtil.cs" />
     <Compile Include="Utils\SpectrumUtil.cs" />
     <Compile Include="Utils\StatUtil.cs" />
+    <EmbeddedResource Include="Controls\AirdPanel.resx">
+      <DependentUpon>AirdPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConversionForm.resx">
       <DependentUpon>ConversionForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -279,6 +288,11 @@
     <Content Include="Properties\AirdProTrans.png" />
     <Content Include="Properties\AirdPro.png" />
     <Content Include="Properties\Conversion.png" />
+    <Content Include="Properties\DirectoryClose16x16.png" />
+    <Content Include="Properties\DirectoryClose32x32.png" />
+    <Content Include="Properties\DirectoryOpen16x16.png" />
+    <Content Include="Properties\DirectoryOpen32x32.png" />
+    <Content Include="Properties\favicon.ico" />
     <Content Include="Properties\Files.png" />
     <Content Include="Properties\Help.png" />
     <Content Include="Properties\Import.png" />
@@ -286,6 +300,8 @@
     <Content Include="Properties\Connected.png" />
     <Content Include="Properties\Start.png" />
     <Content Include="Properties\Setting.png" />
+    <Content Include="Properties\DirectoryClose.png" />
+    <Content Include="Properties\DirectoryOpen.png" />
     <Content Include="Resources\ConversionCenter.png" />
     <Content Include="Resources\AirdManager.png" />
     <Content Include="Resources\CleanFinished.png" />
@@ -327,16 +343,16 @@
       <Version>2.0.15</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.1</Version>
+      <Version>13.0.2-beta2</Version>
     </PackageReference>
     <PackageReference Include="OptimizedPriorityQueue">
       <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
-      <Version>2.6.48</Version>
+      <Version>2.6.66</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>7.0.0-preview.1.22076.8</Version>
+      <Version>7.0.0-preview.2.22152.2</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.2</Version>
