AirdInfo主界面开发完毕

--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -159,18 +159,6 @@
     <Compile Include="Constants\ProcessingStatus.cs" />
     <Compile Include="Constants\ResultCode.cs" />
     <Compile Include="Constants\SoftwareInfo.cs" />
-    <Compile Include="Controls\AirdPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\AirdPanel.Designer.cs">
-      <DependentUpon>AirdPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\ChartPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\ChartPanel.Designer.cs">
-      <DependentUpon>ChartPanel.cs</DependentUpon>
-    </Compile>
     <Compile Include="Converters\DDAPasef .cs" />
     <Compile Include="Converters\DIAPasef.cs" />
     <Compile Include="Domains\HardwareInfo\HardwareInfo.cs" />
@@ -183,6 +171,7 @@
     <Compile Include="Domains\Scan\TimsData.cs" />
     <Compile Include="Domains\Sort\CompressStat.cs" />
     <Compile Include="Domains\Statistic\Stat.cs" />
+    <Compile Include="Domains\View\SpectrumRow.cs" />
     <Compile Include="Forms\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -244,12 +233,6 @@
     <Compile Include="Utils\CVUtil.cs" />
     <Compile Include="Utils\SpectrumUtil.cs" />
     <Compile Include="Utils\StatUtil.cs" />
-    <EmbeddedResource Include="Controls\AirdPanel.resx">
-      <DependentUpon>AirdPanel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\ChartPanel.resx">
-      <DependentUpon>ChartPanel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConversionForm.resx">
       <DependentUpon>ConversionForm.cs</DependentUpon>
       <SubType>Designer</SubType>
