--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -184,6 +184,12 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SpectrumForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SpectrumForm.Designer.cs">
+      <DependentUpon>SpectrumForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -327,6 +333,9 @@
     </PackageReference>
     <PackageReference Include="HDF5DotNet.x64">
       <Version>1.8.9</Version>
+    </PackageReference>
+    <PackageReference Include="iGrid.NET">
+      <Version>2.0.1</Version>
     </PackageReference>
     <PackageReference Include="IronSnappy">
       <Version>1.3.0</Version>
