--- a/AirdPro/app.config
+++ b/AirdPro/app.config
@@ -29,6 +29,15 @@
       <setting name="repository" serializeAs="String">
         <value />
       </setting>
+      <setting name="ConfigFolder" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MLReposFolder" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PXReposFolder" serializeAs="String">
+        <value />
+      </setting>
     </AirdPro.Properties.Settings>
   </userSettings>
 </configuration>
