--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -55,7 +55,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>AIR.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Ico\AIR.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>848A0173A1CC40673E54FEA4FA42778FA27416E4</ManifestCertificateThumbprint>
@@ -142,6 +142,7 @@
     <Compile Include="Algorithms\Compressor\StackComp.cs" />
     <Compile Include="Algorithms\Compressor\CoreComp.cs" />
     <Compile Include="Asyncs\ConvertTaskManager.cs" />
+    <Compile Include="Asyncs\DownloadTaskManager.cs" />
     <Compile Include="Asyncs\LimitedConcurrencyLevelTaskScheduler.cs" />
     <Compile Include="Constants\Activator.cs" />
     <Compile Include="Constants\Manufacturer.cs" />
@@ -159,6 +160,7 @@
     <Compile Include="Constants\ProcessingStatus.cs" />
     <Compile Include="Constants\ResultCode.cs" />
     <Compile Include="Constants\SoftwareInfo.cs" />
+    <Compile Include="Constants\UrlConst.cs" />
     <Compile Include="Converters\DDAPasef .cs" />
     <Compile Include="Converters\DIAPasef.cs" />
     <Compile Include="Domains\HardwareInfo\HardwareInfo.cs" />
@@ -195,6 +197,49 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Domains\Repository\FileRow.cs" />
+    <Compile Include="Domains\Repository\Project.cs" />
+    <Compile Include="Forms\DownloadDetailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DownloadDetailForm.designer.cs">
+      <DependentUpon>DownloadDetailForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RepositoryGuiderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RepositoryGuiderForm.Designer.cs">
+      <DependentUpon>RepositoryGuiderForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MLForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MLForm.Designer.cs">
+      <DependentUpon>MLForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PXForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PXForm.Designer.cs">
+      <DependentUpon>PXForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Domains\Repository\MetaboLights\Annotation.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Assay.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Factor.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\IsaInvestigation.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\MtblsStudy.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\NameValue.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Parameter.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\People.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Protocol.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Publication.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Repository.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Source.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\Study.cs" />
+    <Compile Include="Domains\Repository\MetaboLights\StudySummary.cs" />
+    <Compile Include="Domains\Repository\ProteomeXchange\Node.cs" />
+    <Compile Include="Domains\Repository\ProteomeXchange\RootProject.cs" />
+    <Compile Include="Domains\Repository\ProteomeXchange\TermNode.cs" />
     <Compile Include="Storage\Config\GlobalConfig.cs" />
     <Compile Include="Domains\Job\JobInfo.cs" />
     <Compile Include="Storage\Config\ConversionConfig.cs" />
@@ -237,6 +282,8 @@
     <Compile Include="Storage\Observer.cs" />
     <Compile Include="Storage\Subject.cs" />
     <Compile Include="Utils\CVUtil.cs" />
+    <Compile Include="Utils\FileUtil.cs" />
+    <Compile Include="Utils\HttpUtil.cs" />
     <Compile Include="Utils\SpectrumUtil.cs" />
     <Compile Include="Utils\StatUtil.cs" />
     <EmbeddedResource Include="Forms\ConversionForm.resx">
@@ -266,6 +313,18 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DownloadDetailForm.resx">
+      <DependentUpon>DownloadDetailForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RepositoryGuiderForm.resx">
+      <DependentUpon>RepositoryGuiderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MLForm.resx">
+      <DependentUpon>MLForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PXForm.resx">
+      <DependentUpon>PXForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -284,40 +343,35 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AIR.ico" />
-    <Content Include="AirdPro.ico" />
-    <Content Include="AIR_01.ico" />
-    <Content Include="favicon.ico" />
-    <Content Include="Properties\AIR.ico" />
-    <Content Include="Properties\AIR.png" />
-    <Content Include="Properties\AirdProLogo.png" />
-    <Content Include="Properties\AirdProTrans.png" />
-    <Content Include="Properties\AirdPro.png" />
-    <Content Include="Properties\AIR_01.ico" />
-    <Content Include="Properties\AIR_01.png" />
-    <Content Include="Properties\Conversion.png" />
-    <Content Include="Properties\DirectoryClose16x16.png" />
-    <Content Include="Properties\DirectoryClose32x32.png" />
-    <Content Include="Properties\DirectoryOpen16x16.png" />
-    <Content Include="Properties\DirectoryOpen32x32.png" />
-    <Content Include="Properties\favicon.ico" />
-    <Content Include="Properties\Files.png" />
-    <Content Include="Properties\Help.png" />
-    <Content Include="Properties\Import.png" />
-    <Content Include="Properties\DisConnect.png" />
-    <Content Include="Properties\Connected.png" />
-    <Content Include="Properties\Start.png" />
-    <Content Include="Properties\Setting.png" />
-    <Content Include="Properties\DirectoryClose.png" />
-    <Content Include="Properties\DirectoryOpen.png" />
-    <Content Include="Resources\ConversionCenter.png" />
-    <Content Include="Resources\AirdManager.png" />
-    <Content Include="Resources\CleanFinished.png" />
-    <Content Include="Resources\CleanErrors.png" />
-    <Content Include="Resources\Setting.png" />
-    <None Include="Resources\AirdProLogoBlack.png" />
-    <None Include="Resources\AirdProLogo.png" />
-    <None Include="Resources\AirdProIcon.png" />
+    <Content Include="Resources\Ico\AIR.ico" />
+    <Content Include="Resources\Logo\AIR.png" />
+    <Content Include="Resources\Logo\AirdPro.png" />
+    <Content Include="Resources\Logo\AirdProLogo.png" />
+    <Content Include="Resources\Logo\AirdProTrans.png" />
+    <Content Include="Resources\Ico\AIR_01.ico" />
+    <Content Include="Resources\Logo\AIR_01.png" />
+    <Content Include="Resources\Menu\Connected.png" />
+    <Content Include="Resources\Menu\Conversion.png" />
+    <Content Include="Resources\Menu\DirectoryClose.png" />
+    <Content Include="Resources\Menu\DirectoryClose16x16.png" />
+    <Content Include="Resources\Menu\DirectoryClose32x32.png" />
+    <Content Include="Resources\Menu\DirectoryOpen.png" />
+    <Content Include="Resources\Menu\DirectoryOpen16x16.png" />
+    <Content Include="Resources\Menu\DirectoryOpen32x32.png" />
+    <Content Include="Resources\Menu\Repository.png" />
+    <Content Include="Resources\Pay\AliPay.jpg" />
+    <Content Include="Resources\Menu\ConversionCenter.png" />
+    <Content Include="Resources\Menu\AirdManager.png" />
+    <Content Include="Resources\Menu\CleanFinished.png" />
+    <Content Include="Resources\Menu\CleanErrors.png" />
+    <Content Include="Resources\Menu\DisConnect.png" />
+    <Content Include="Resources\Menu\Files.png" />
+    <Content Include="Resources\Menu\Import.png" />
+    <Content Include="Resources\Brand\MetaboLights.jpg" />
+    <Content Include="Resources\Brand\Proteomexchange.png" />
+    <Content Include="Resources\Menu\Setting.png" />
+    <Content Include="Resources\Menu\Start.png" />
+    <Content Include="Resources\Pay\Weixin.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
@@ -335,6 +389,9 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AirdSDK">
+      <Version>2.0.3.1-beta2</Version>
+    </PackageReference>
     <PackageReference Include="BetterFolderBrowser">
       <Version>1.2.0</Version>
     </PackageReference>
@@ -343,6 +400,9 @@
     </PackageReference>
     <PackageReference Include="HDF5DotNet.x64">
       <Version>1.8.9</Version>
+    </PackageReference>
+    <PackageReference Include="HtmlAgilityPack.NetCore">
+      <Version>1.5.0.1</Version>
     </PackageReference>
     <PackageReference Include="iGrid.NET">
       <Version>2.0.1</Version>
@@ -360,7 +420,7 @@
       <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="StackExchange.Redis">
-      <Version>2.6.66</Version>
+      <Version>2.6.70</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>7.0.0-preview.2.22152.2</Version>
@@ -374,12 +434,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Test\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Aird-SDK\CSharpSDK\AirdSDK.csproj">
-      <Project>{9c1d980f-81de-4661-b1ea-d18060304930}</Project>
-      <Name>AirdSDK</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
