更新打包方式

--- a/AirdPro/AirdPro.csproj
+++ b/AirdPro/AirdPro.csproj
@@ -27,7 +27,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>4.0.2.%2a</ApplicationVersion>
+    <ApplicationVersion>4.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -65,14 +65,14 @@
     </ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -373,7 +373,7 @@
     <Content Include="Resources\Menu\Setting.png" />
     <Content Include="Resources\Menu\Start.png" />
     <Content Include="Resources\Pay\Weixin.png" />
-    <Content Include="ReleaseLog.txt" />
+    <Content Include="Version-CN.xml" />
     <Content Include="Version.xml" />
   </ItemGroup>
   <ItemGroup>
